--- a/camerafront/src/app/login/login.component.scss
+++ b/camerafront/src/app/login/login.component.scss
@@ -22,7 +22,7 @@
     overflow: auto;
 
     .login-bg-container {
-      background-image: url(https://cdn.discordapp.com/attachments/1153576792486064158/1171742723947102228/portada.png?ex=655dc973&is=654b5473&hm=b53f3eba039feff6939064abf3171b04950737d403baeea1c6c34e556fcc8ee1&);
+      background-image: url(https://cdn.discordapp.com/attachments/1153576792486064158/1172508510731391047/portada.png?ex=656092a5&is=654e1da5&hm=e2513a5ad3b4581d04a01dcaad40dd55c93bf3c9a96751b48914c59c1e84f717&);
       width: calc(100% - 640px);
       background-repeat: no-repeat;
       background-size: cover;
@@ -179,7 +179,7 @@
   margin-top: 1px;
   font-weight: bold;
   font-size: 1.8rem;
-  font-family: "League Spartan", sans-serif;
+  font-family: "League Spartan";
   color: white;
   padding-left: 20px;
 }
