cambios boton coral

--- a/camerafront/src/app/main/products/products-detail/products-detail.component.css
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.css
@@ -101,3 +101,6 @@
   /* color: red; */
   background: linear-gradient(to top left,#a15e5e, #e71515 );
 }
+.miBotonPersonalizado {
+  background-color: #FFA099;
+}
