--- a/camerafront/src/app/main/products/products-new-rental/products-new-rental.component.html
+++ b/camerafront/src/app/main/products/products-new-rental/products-new-rental.component.html
@@ -10,6 +10,6 @@
     </div>
     <div>
 
-        <o-button attr="bconfirm" type="BASIC" label="CONFIRM" layout-padding (click)="update()"></o-button>
+        <o-button id="customButton" attr="bconfirm" type="BASIC" label="CONFIRM" layout-padding (click)="update()"></o-button>
     </div>
 </o-form>
