--- a/camerafront/src/app/login/login.component.scss
+++ b/camerafront/src/app/login/login.component.scss
@@ -161,17 +161,17 @@
   }
 }
 .img-container {
-  text-align: end;
+  text-align: left;
 }
 
 .logo_page {
-  display: block;
+  // display: block;
   margin: 0 auto;
   max-width: 100%;
   max-height: 150px;
   padding-top: 370px;
   text-align: left;
-  padding-right: 520px;
+
 }
 
 .title_page {
