--- a/camerafront/src/assets/themes/ontimize-dark.css
+++ b/camerafront/src/assets/themes/ontimize-dark.css
@@ -380,7 +380,7 @@ o-row.o-row.bg-level-1 {
 /* Theme for the ripple elements.*/
 /* stylelint-disable material/no-prefixes */
 /* stylelint-enable */
-@font-face {
+/* @font-face {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
@@ -390,7 +390,7 @@ o-row.o-row.bg-level-1 {
     U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 
-/* latin-ext */
+
 @font-face {
   font-family: "Poppins";
   font-style: normal;
@@ -401,7 +401,7 @@ o-row.o-row.bg-level-1 {
     U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* latin */
+
 @font-face {
   font-family: "Poppins";
   font-style: normal;
@@ -411,7 +411,7 @@ o-row.o-row.bg-level-1 {
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
-}
+} */
 
 /*it's necessary redefined the font size of the checkbox*/
 /* Theme for the ripple elements.*/
@@ -1395,7 +1395,7 @@ o-row.o-row.bg-level-1 {
 .mat-badge-content {
   font-weight: 600;
   font-size: 12px;
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-badge-small .mat-badge-content {
@@ -1409,52 +1409,52 @@ o-row.o-row.bg-level-1 {
 .mat-h1,
 .mat-headline,
 .mat-typography h1 {
-  font: 400 24px/24px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 24px/24px 'League Spartan', sans-serif;
   margin: 0 0 16px;
 }
 
 .mat-h2,
 .mat-title,
 .mat-typography h2 {
-  font: 500 18px/24px Poppins, "Helvetica Neue", sans-serif;
+  font: 500 18px/24px 'League Spartan', sans-serif;
   margin: 0 0 16px;
 }
 
 .mat-h3,
 .mat-subheading-2,
 .mat-typography h3 {
-  font: 600 14px/21px Poppins, "Helvetica Neue", sans-serif;
+  font: 600 14px/21px 'League Spartan', sans-serif;
   margin: 0 0 16px;
 }
 
 .mat-h4,
 .mat-subheading-1,
 .mat-typography h4 {
-  font: 400 14px/18px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 14px/18px 'League Spartan', sans-serif;
   margin: 0 0 16px;
 }
 
 .mat-h5,
 .mat-typography h5 {
-  font: 400 calc(12px * 0.83) / 15px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 calc(12px * 0.83) / 15px 'League Spartan', sans-serif;
   margin: 0 0 12px;
 }
 
 .mat-h6,
 .mat-typography h6 {
-  font: 400 calc(12px * 0.67) / 15px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 calc(12px * 0.67) / 15px 'League Spartan', sans-serif;
   margin: 0 0 12px;
 }
 
 .mat-body-strong,
 .mat-body-2 {
-  font: 500 12px/18px Poppins, "Helvetica Neue", sans-serif;
+  font: 500 12px/18px 'League Spartan', sans-serif;
 }
 
 .mat-body,
 .mat-body-1,
 .mat-typography {
-  font: 400 12px/15px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 12px/15px 'League Spartan', sans-serif;
 }
 .mat-body p,
 .mat-body-1 p,
@@ -1464,35 +1464,35 @@ o-row.o-row.bg-level-1 {
 
 .mat-small,
 .mat-caption {
-  font: 400 11px/15px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 11px/15px 'League Spartan', sans-serif;
 }
 
 .mat-display-4,
 .mat-typography .mat-display-4 {
-  font: 300 84px/92px Poppins, "Helvetica Neue", sans-serif;
+  font: 300 84px/92px 'League Spartan', sans-serif;
   margin: 0 0 56px;
 }
 
 .mat-display-3,
 .mat-typography .mat-display-3 {
-  font: 400 42px/42px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 42px/42px 'League Spartan', sans-serif;
   margin: 0 0 64px;
 }
 
 .mat-display-2,
 .mat-typography .mat-display-2 {
-  font: 400 34px/36px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 34px/36px 'League Spartan', sans-serif;
   margin: 0 0 64px;
 }
 
 .mat-display-1,
 .mat-typography .mat-display-1 {
-  font: 400 26px/30px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 26px/30px 'League Spartan', sans-serif;
   margin: 0 0 64px;
 }
 
 .mat-bottom-sheet-container {
-  font: 400 12px/15px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 12px/15px 'League Spartan', sans-serif;
 }
 
 .mat-button,
@@ -1502,17 +1502,17 @@ o-row.o-row.bg-level-1 {
 .mat-flat-button,
 .mat-fab,
 .mat-mini-fab {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 13px;
   font-weight: 500;
 }
 
 .mat-button-toggle {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-card {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-card-title {
@@ -1530,7 +1530,7 @@ o-row.o-row.bg-level-1 {
 }
 
 .mat-checkbox {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-checkbox-layout .mat-checkbox-label {
@@ -1547,7 +1547,7 @@ o-row.o-row.bg-level-1 {
 }
 
 .mat-table {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-header-cell {
@@ -1561,7 +1561,7 @@ o-row.o-row.bg-level-1 {
 }
 
 .mat-calendar {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-calendar-body {
@@ -1580,21 +1580,21 @@ o-row.o-row.bg-level-1 {
 }
 
 .mat-dialog-title {
-  font: 500 18px/24px Poppins, "Helvetica Neue", sans-serif;
+  font: 500 18px/24px 'League Spartan', sans-serif;
 }
 
 .mat-expansion-panel-header {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 14px;
   font-weight: 400;
 }
 
 .mat-expansion-panel-content {
-  font: 400 12px/15px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 12px/15px 'League Spartan', sans-serif;
 }
 
 .mat-form-field {
-  font: 400 14px/1.125 Poppins, "Helvetica Neue", sans-serif;
+  font: 400 14px/1.125 'League Spartan', sans-serif;
 }
 
 .mat-form-field-wrapper {
@@ -1811,23 +1811,23 @@ input.mat-input-element {
 }
 
 .mat-menu-item {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 12px;
   font-weight: 400;
 }
 
 .mat-paginator,
 .mat-paginator-page-size .mat-select-trigger {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 11px;
 }
 
 .mat-radio-button {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-select {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-select-trigger {
@@ -1835,18 +1835,18 @@ input.mat-input-element {
 }
 
 .mat-slide-toggle-content {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-slider-thumb-label-text {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 11px;
   font-weight: 500;
 }
 
 .mat-stepper-vertical,
 .mat-stepper-horizontal {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-step-label {
@@ -1868,12 +1868,12 @@ input.mat-input-element {
 }
 
 .mat-tab-group {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-tab-label,
 .mat-tab-link {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 13px;
   font-weight: 500;
 }
@@ -1885,12 +1885,12 @@ input.mat-input-element {
 .mat-toolbar h4,
 .mat-toolbar h5,
 .mat-toolbar h6 {
-  font: 500 18px/24px Poppins, "Helvetica Neue", sans-serif;
+  font: 500 18px/24px 'League Spartan', sans-serif;
   margin: 0;
 }
 
 .mat-tooltip {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 10px;
   padding-top: 6px;
   padding-bottom: 6px;
@@ -1903,11 +1903,11 @@ input.mat-input-element {
 }
 
 .mat-list-item {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-list-option {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-list-base .mat-list-item {
@@ -1939,7 +1939,7 @@ input.mat-input-element {
 }
 
 .mat-list-base .mat-subheader {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 12px;
   font-weight: 500;
 }
@@ -1973,22 +1973,22 @@ input.mat-input-element {
 }
 
 .mat-list-base[dense] .mat-subheader {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 11px;
   font-weight: 500;
 }
 
 .mat-option {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 14px;
 }
 
 .mat-optgroup-label {
-  font: 500 12px/18px Poppins, "Helvetica Neue", sans-serif;
+  font: 500 12px/18px 'League Spartan', sans-serif;
 }
 
 .mat-simple-snackbar {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
   font-size: 12px;
 }
 
@@ -2000,7 +2000,7 @@ input.mat-input-element {
 }
 
 .mat-tree {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .mat-tree-node,
@@ -4361,7 +4361,7 @@ input,
 select,
 span,
 textarea {
-  font-family: Poppins, "Helvetica Neue", sans-serif;
+  font-family: 'League Spartan', sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -4992,7 +4992,7 @@ o-data-toolbar.o-table-toolbar .buttons button:last-child {
 
 /* CHART FONT */
 o-chart .nvd3 text {
-  font: 400 11px Poppins, "Helvetica Neue", sans-serif;
+  font: 400 11px 'League Spartan', sans-serif;
   fill: rgba(255, 255, 255, 0.87);
 }
 
