--- a/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
@@ -1,4 +1,4 @@
-<div class="out-container">
+<o-button attr="misalquileres" type="MIS ALQUILERES" label="Primary" layout-padding color="primary"></o-button>
   <o-table #tableout service="productsRequest" entity="myProductRequestEntry" keys="id_prequest"
     columns="main_photo;id_prequest;product_name;start_date;end_date;tproducts_id_product;state;price;request_text;r_user;p_user;p_phone;r_phone"
     visible-columns="main_photo;product_name;start_date;end_date;state;profit" query-rows="10" pageable="no"
