--- a/camerafront/src/app/main/products/products-home/products-home.component.css
+++ b/camerafront/src/app/main/products/products-home/products-home.component.css
@@ -8,6 +8,7 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  color: #eff3f6f1;
   /* align-items: center;
   overflow: hidden; */
   /* justify-content: flex-end; */
@@ -40,17 +41,22 @@
   .name {
     /* margin-bottom: 8px; */
     /* font-size: 0.9em; */
-    margin-top: 5px;
+    padding: 0 10px;
+    margin-top: 8px;
     height: auto;
-    font-size: 100%;
-    text-align: center;
+    font-size: 120%;
+    /* text-align: center; */
    
   }
   .details {
-    display: flex;
+    display: flex; 
     justify-content: space-between; /* Esto alinea los elementos a los extremos */
     align-items: center; /* Alinea los elementos verticalmente */
     padding: 0 5px; /* Añade un poco de padding si es necesario */
+    
+  }
+  .plocation{
+    color: #eff3f6e3;
   }
 
   /*.details b {
@@ -64,18 +70,20 @@
     height: 30px;
     width: 30px;
     vertical-align: middle;
+    color: rgba(255, 255, 255, 0.651);
     /* -webkit-background-clip: text; */
-    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    color: transparent;
-    text-shadow: none;
+    /* text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    
+    text-shadow: none; */
 
   }
   .price{
-    /* justify-content: flex-end; */
-    max-height: 10%;
     text-align: right;
-    font-size: 100%;
-    margin: 1px 6px 1px 1px;
+    /* justify-content: flex-end; */
+    /* max-height: 10%;
+    
+    font-size: 100%; */
+    /* margin: 1px 6px 1px 1px; */
     overflow: hidden;
    
   }
