--- a/camerafront/src/app/main/products/products-detail/products-detail.component.css
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.css
@@ -1,39 +1,24 @@
 
 .container {
   text-align: center;
-  /* height: auto; */
-  width: 100%;
-  height: 100%;
+  width: 98%;
+  height: 98%;
   background-color: #85A3B6;
   overflow: hidden;
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-
-  /* .container2{
-    height: 100%;
-  } */
-
-
+  margin: 10px;
 }
+
+  
 
 .img-container {
   /* height: auto; */
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
+  border-radius: 10px;
   height: 100%;
   width: 80%;
   overflow: hidden;
 }
 
 .img-container img {
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
   object-fit: cover;
   /* width: 100%; */
   height: 100%;
@@ -44,7 +29,7 @@
   /* height: 100%; */
   width: 20%;
   height: 95%;
-  margin: 15px;
+  margin: 10px;
 }
 
 .name-container {
@@ -54,24 +39,26 @@
 }
 
 .detail-container {
-  text-align: center;
-  
+  font-size: 1.2em;
+  text-align: left;
   height: 50%;
 }
 
 .price-container {
   /* justify-content: flex-end; */
   /* max-height: 10%; */
+  margin-top: 20px;
+  margin-right: 10px;
   height: 15%;
   text-align: right;
   font-size: 150%;
-  margin: 1px 6px 1px 1px;
   overflow: hidden;
 
 }
 
 .price .number {
   font-size: 180%;
+  text-align: center;
 }
 
 .price .day {
@@ -79,12 +66,10 @@
 }
 
 .detail-container .mat-icon {
-  /* font-size: 30px; */
+  font-size: 100%;
   height: 30px;
   width: 30px;
   vertical-align: middle;
-  -webkit-background-clip: text;
-  /* background-clip: text; */
   color: transparent;
   text-shadow: none;
 
@@ -103,4 +88,5 @@
 }
 .miBotonPersonalizado {
   background-color: #FFA099;
+  border-radius: 10px;
 }
