--- a/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
+++ b/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
@@ -5,7 +5,7 @@
       visible-columns="main_photo;product_name;statusname;product_type;price;avaliable"
       quick-filter="true" 
       filter-case-sensitive="false" columns-visibility-button="true" select-all-checkbox="true" show-buttons-text="true"
-      controls="true" show-title="true" 
+      controls="true" show-title="true" title="{{'MYPRODUCTS' | oTranslate }}"
       horizontal-scroll="false" auto-adjust="false" virtual-scroll="no" >
       <o-table-columns-filter columns="status;id_product;product_name"></o-table-columns-filter>
       <o-table-column attr="main_photo" orderable="no" searchable="no" width="64px">
