--- a/camerafront/src/app/main/products/products-detail/products-detail.component.css
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.css
@@ -1,19 +1,17 @@
-
 .container {
   text-align: center;
   width: 98%;
-  height: 98%;
+  height: 100%;
   background-color: #85A3B6;
   overflow: hidden;
-  margin: 10px;
+  /* margin: 10px; */
+  color: rgba(255, 255, 255, 0.651);
 }
-
-  
 
 .img-container {
   /* height: auto; */
   border-radius: 10px;
-  height: 100%;
+  height: 99%;
   width: 80%;
   overflow: hidden;
 }
@@ -28,14 +26,15 @@
 .data-container {
   /* height: 100%; */
   width: 20%;
-  height: 95%;
+  height: 90%;
   margin: 10px;
 }
 
 .name-container {
   font-size: 30px;
   /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 1); */
-  height: 30%;
+  height: 25%;
+  padding-top: 5%;
 }
 
 .detail-container {
@@ -44,24 +43,31 @@
   height: 50%;
 }
 
+.detail-container div {
+  padding: 2px;
+}
+
 .price-container {
-  /* justify-content: flex-end; */
-  /* max-height: 10%; */
-  margin-top: 20px;
-  margin-right: 10px;
   height: 15%;
   text-align: right;
+
+  /* justify-content: flex-end; */
+  /* max-height: 10%; */
+  /* margin-top: 20px;
+  margin-right: 10px;
+  
+  
   font-size: 150%;
-  overflow: hidden;
+  overflow: hidden; */
 
 }
 
-.price .number {
+.price-container .number {
   font-size: 180%;
   text-align: center;
 }
 
-.price .day {
+.price-container .day {
   font-size: 50%;
 }
 
@@ -74,8 +80,9 @@
   text-shadow: none;
 
 }
+
 .green-check {
-  background: linear-gradient(to top left, #5f745b,#38c725 );
+  background: linear-gradient(to top left, #5f745b, #38c725);
   /* Cambia los códigos de color según tus preferencias */
 
   /* color:
@@ -84,9 +91,16 @@
 
 .red-check {
   /* color: red; */
-  background: linear-gradient(to top left,#a15e5e, #e71515 );
+  background: linear-gradient(to top left, #a15e5e, #e71515);
 }
+
 .miBotonPersonalizado {
   background-color: #FFA099;
   border-radius: 10px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: end;
+  padding: 3%;
 }
