--- a/camerafront/src/app/main/products/products-detail/products-detail.component.html
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.html
@@ -36,10 +36,14 @@
         <b>: {{data.pdetails}}</b>
       </div>
     </div>
-    <o-button attr="bconfirm" type="BASIC" label="{{'RENT' | oTranslate }}" layout-padding (click)="openRentDialog()" class="miBotonPersonalizado"></o-button>
+
     <div class="price-container">
       <b class="number">{{ data.price }}</b><b>€</b><b class="day">/{{ 'day' |
         oTranslate}} </b>
+    </div>
+        <div class="button-container">
+      <o-button attr="bconfirm" type="BASIC" label="{{'RENT' | oTranslate }}" layout-padding (click)="openRentDialog()"
+        class="miBotonPersonalizado"></o-button>
     </div>
   </div>
 </o-row>
