--- a/camerafront/src/app/main/profile/profile-home/profile-home.component.css
+++ b/camerafront/src/app/main/profile/profile-home/profile-home.component.css
@@ -9,8 +9,7 @@
     border: 5px double;
     background-color: #426D83;
     border-image-slice: 1;
-
-
+    color: rgba(255, 255, 255, 0.918);
 }
 
 .data-container o-text-input {
