--- a/camerafront/src/app/main/products/products-detail/products-detail.component.css
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.css
@@ -9,18 +9,31 @@
 }
 
 .img-container {
+  display: flex;
   /* height: auto; */
   border-radius: 10px;
   height: 99%;
   width: 80%;
   overflow: hidden;
+  /* vertical-align: middle; */
+  align-items: center;
+  justify-content: center;
+  background-color: #FFFFFF;
 }
 
-.img-container img {
-  object-fit: cover;
-  /* width: 100%; */
-  height: 100%;
+.image {
+  /* object-fit: cover; */
+  /* height: 100%; */
   width: 100%;
+ transition: transform 1s;
+  /* -webkit-transform: scale(1.5); */
+  
+}
+.image:hover{
+  height: 100%;
+  width: auto;
+    
+  /* transform: scale(0.7); */
 }
 
 .data-container {
