--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -11,15 +11,15 @@
       </li>
   </ul>
 </div>
-<o-grid #grid attr="productGrid" title="{{'PRODUCTS TITLE' | oTranslate}}" cols="5" query-rows="8" quick-filter="true"
+<o-grid #grid attr="productGrid" title="{{'PRODUCTS TITLE' | oTranslate}}" cols="5" query-rows="8" quick-filter="false"
   grid-item-height="2:3" insert-button="false" gutter-size="5px" fixed-header="yes" [ngStyle]="{ height: 'auto' }"
   service="products" entity="product" keys="id_product" orderable="yes" detail-mode="none"
   columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname;pdetails"
   visible-columns="main_photo;product_name;price;status;product_type;avaliable"
-  sortable-columns="price:DESC;price;avaliable:DESC;avaliable">
+  sortable-columns="price:DESC;price;avaliable:DESC;avaliable" position="end">
 
 
-  <o-combo #bindingInput o-grid-toolbar width="100px" position="start" attr="product_type"
+  <o-combo #bindingInput o-grid-toolbar width="100px" position="end" attr="product_type"
     [static-data]="productTypeArray" value-column="typeText" columns="typeText" visible-columns="typeText"
     read-only="no" required="yes" null-selection="no" translate="yes" (onValueChange)="onSelected()"
     class="form-field"></o-combo>
