--- a/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
+++ b/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
@@ -1,22 +1,19 @@
 <div class="container">
-  <o-form fxLayout="column" service="products" entity="product" keys="product_name"
-  show-header-navigation="no" header-actions="R;I;U;D">
-  <!-- (onDataLoaded)="loadData($event)" -->
-  <o-text-input oHidden enabled="no" attr="id_product" sql-type="INTEGER"></o-text-input>
-  <!-- <o-row> -->
-    <o-column class="image-container">
-      <o-image id="main_photo" attr="main_photo" empty-image="assets/images/no-image.png" sql-type="OTHER"
-        image-type="base64"></o-image>
-    </o-column>
+  <o-form fxLayout="column" service="products" entity="product" keys="id_product" show-header-navigation="no"
+    header-actions="R;I;U;D">
+    <!-- (onDataLoaded)="loadData($event)" -->
+    <o-text-input oHidden enabled="no" attr="id_product" sql-type="INTEGER"></o-text-input>
+
+
     <o-column class="detail-container">
       <o-row>
         <o-text-input fxFill class="input-padding" attr="product_name" required="yes"></o-text-input>
       </o-row>
       <o-row>
-        <o-combo fxFill attr="status" service="products" entity="productStatus" keys="id" value-column="id" columns="id;status"
-          visible-columns="status" read-only="no" required="yes" translate="yes" null-selection="no"></o-combo>
+        <o-combo fxFill attr="status" service="products" entity="productStatus" keys="id" value-column="id"
+          columns="id;status" visible-columns="status" read-only="no" required="yes" translate="yes"
+          null-selection="no"></o-combo>
       </o-row>
-
       <o-row>
         <o-combo fxFill attr="product_type" [static-data]="productTypeArray" value-column="typeText" columns="typeText"
           visible-columns="typeText" read-only="no" required="yes" null-selection="no" translate="yes"></o-combo>
@@ -25,17 +22,31 @@
         <o-text-input fxFill attr="plocation"></o-text-input>
       </o-row>
       <o-row>
-        <o-currency-input fxFill attr="price"  currency-symbol="EUR" max-decimal-digits="2"></o-currency-input>
+        <o-currency-input fxFill attr="price" currency-symbol="EUR" max-decimal-digits="2"></o-currency-input>
       </o-row>
       <o-row>
-        <o-text-input fxFill attr="pdetails" ></o-text-input>
+        <o-text-input fxFill attr="pdetails"></o-text-input>
       </o-row>
       <o-row class="avaliable-container">
         <o-checkbox attr="avaliable" read-only="no"></o-checkbox>
       </o-row>
     </o-column>
-  <!-- </o-row> -->
-</o-form>
+    <o-column class="image-container">
+      <!-- <o-form fxLayout="column" service="products" entity="productImage" parent-keys="id_product" keys="tproducts_id_product" show-header-navigation="no"
+        header-actions="R;I;U;D">
+        <mat-tab-group oTabGroup="ontimize">
+          <mat-tab label="First"> -->
+            <o-image id="main_photo" attr="main_photo" empty-image="assets/images/no-image.png" sql-type="OTHER"
+              image-type="base64"></o-image>
+          <!-- </mat-tab>
+          <mat-tab label="Second">
+            <o-image id="img2" attr="img2" empty-image="assets/images/no-image.png" sql-type="OTHER" image-type="base64"></o-image>
+          </mat-tab>
+          <mat-tab label="Third">
+            <o-image id="img3" attr="img3" empty-image="assets/images/no-image.png" sql-type="OTHER" image-type="base64"></o-image>
+          </mat-tab>
+        </mat-tab-group>
+      </o-form> -->
+    </o-column>
+  </o-form>
 </div>
-
-
