--- a/camerafront/src/styles.scss
+++ b/camerafront/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-* {
-    font-family: 'League Spartan', sans-serif;
-}
+// * {
+//     font-family: 'League Spartan', sans-serif;
+// }
 
 .custom-dialog-container .mat-dialog-container {
     padding: 0px;
