--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -1,17 +1,14 @@
 
 <div class="container">
-  <div class="search-container">
-      <input type="text" [(ngModel)]="searchTerm" placeholder="Buscar en Camera Rent..." (input)="performSearch()">
-      <button (click)="performSearch()">Buscar</button>
-  </div>
 
-  <ul>
+
+  <!-- <ul>
       <li *ngFor="let result of searchResults" class="search-result">
           {{ result }}
       </li>
-  </ul>
+  </ul> title="{{'PRODUCTS TITLE' | oTranslate}}"-->
 </div>
-<o-grid #grid attr="productGrid" title="{{'PRODUCTS TITLE' | oTranslate}}" cols="5" query-rows="8" quick-filter="false"
+<o-grid #grid attr="productGrid"  cols="5" query-rows="8" quick-filter="false"
   grid-item-height="2:3" insert-button="false" gutter-size="5px" fixed-header="yes" [ngStyle]="{ height: 'auto' }"
   service="products" entity="product" keys="id_product" orderable="yes" detail-mode="none"
   columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname;pdetails"
@@ -23,7 +20,10 @@
     [static-data]="productTypeArray" value-column="typeText" columns="typeText" visible-columns="typeText"
     read-only="no" required="yes" null-selection="no" translate="yes" (onValueChange)="onSelected()"
     class="form-field"></o-combo>
-
+  <div #bindingInput o-grid-toolbar class="search-container">
+      <input type="text" [(ngModel)]="searchTerm" placeholder="Buscar en Camera Rent..." (input)="performSearch()">
+      <button (click)="performSearch()">Buscar</button>
+  </div>
   <!-- <o-button o-grid-toolbar width="100px" position="start" attr="applyfilter"  label="APPLY_FILTER" (click)="gridFilter()"></o-button> -->
 
 
