--- a/camerafront/src/app/main/products/products-home/products-home.component.css
+++ b/camerafront/src/app/main/products/products-home/products-home.component.css
@@ -117,7 +117,7 @@
 .mat-dialog-container {padding: 0px;}
 
 /* styles.css o en tu componente específico */
-body {
+/* body {
   font-family: 'League Spartan', 'Arial', sans-serif;
   background-color: #426D83;
   margin: 0;
@@ -126,26 +126,41 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-}
+} */
 
-.container {
-  display: flex;
+.search-container0 {
+  /* display: flex; */
+  /* 
   flex-direction: column;
   align-content: center;
-  justify-content: center;
+  justify-content: center; */
   width: 100%;
-  max-width: 600px; /* Ancho máximo del contenedor */
-  margin-top: 50px; /* Espacio en la parte superior del contenedor */
+  /* justify-content: unsafe center; */
+  /* max-width: 600px; 
+  margin-top: 50px;  */
+  position: absolute;
+  padding-bottom: 40px;
 }
 
 .search-container {
-  display: flex;
-  align-content: center;
-  margin-bottom: 20px;
+  /* display: flex; */
+
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-66%, -40%);
+
+  /* align-content: center; */
+  /* vertical-align: center; */
+  
+  align-items: center;
+  /* margin-bottom: 20px; */
+  /* margin-left: 20px; */
   background-color: #FFA099; /* Tono del botón de búsqueda */
   border-radius: 24px; /* Esquinas redondeadas */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sutil sombra */
-  width: 100%; /* Ancho del 100% del contenedor */
+  width: 20%; /* Ancho del 100% del contenedor */
 }
 
 input {
@@ -168,19 +183,20 @@ button {
   outline: none; /* Elimina el contorno predeterminado del botón */
 }
 
-ul {
+
+/* ul {
   list-style-type: none;
   padding: 0;
-  width: 100%; /* Ancho del 100% del contenedor */
-}
+  width: 100%; Ancho del 100% del contenedor
+} */
 
-.search-result {
+/* .search-result {
   margin: 5px;
   padding: 10px;
   border: 1px solid #ddd;
-  background-color: #426D83; /* Tono del color de fondo de los resultados de búsqueda */
-  color: #fff; /* Texto de color blanco */
-  border-radius: 8px; /* Esquinas redondeadas */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sutil sombra */
-  width: 100%; /* Ancho del 100% del contenedor */
-}
+  background-color: #426D83; Tono del color de fondo de los resultados de búsqueda
+  color: #fff; Texto de color blanco
+  border-radius: 8px; Esquinas redondeadas
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); Sutil sombra
+  width: 100%; Ancho del 100% del contenedor
+} */
