--- a/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.html
@@ -5,7 +5,7 @@
             <img src="data:image/png;base64,{{data.main_photo}}" empty-image="assets/images/no-image.png">
         </div>
         <div class="data-container">
-            <b>{{'profit' | oTranslate}}: </b><span>{{data.profit}}€ </span>
+            <b>{{'profit' | oTranslate}}: </b><span>{{data.rprofit}}€ </span>
             <p><span>{{data.start_date | date: 'dd/MM/yyyy'}}</span><b> - </b><span>{{data.end_date | date:
                     'dd/MM/yyyy'}}</span></p>
         </div>
@@ -13,12 +13,12 @@
     <div class="table_container">
         <o-table #table2 show-title="true" title="{{'CONFLICTED RENTS' | oTranslate }}" service="productsRequest"
             entity="myProductRequestEntry"
-            columns="main_photo;id_prequest;product_name;start_date;end_date;tproducts_id_product;state;price;request_text;r_user;p_user"
-            visible-columns="start_date;end_date;r_user;profit;profit_diff" pageable="no" insert-button="no"
+            columns="main_photo;id_prequest;product_name;start_date;end_date;tproducts_id_product;state;rprice;request_text;r_user;p_user;rprofit"
+            visible-columns="start_date;end_date;r_user;rprofit;profit_diff" pageable="no" insert-button="no"
             delete-button="no" detail-mode="none" refresh-button="none" query-on-init="no">
             <o-table-column attr="start_date" title="start_date" type="date" format="L"></o-table-column>
             <o-table-column attr="end_date" title="end_date" type="date" format="L"></o-table-column>
-            <o-table-column attr="profit" title="profit" currency-symbol="€" type="currency"
+            <o-table-column attr="rprofit" title="profit" currency-symbol="€" type="currency"
                 currency-symbol-position="right"></o-table-column>
             <o-table-column attr="profit_diff" title="profit_diff">
                 <app-profit-dif-column-renderer></app-profit-dif-column-renderer>
