--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -11,7 +11,7 @@
   insert-button="false" refresh-button="false" gutter-size="5px" fixed-header="yes" [ngStyle]="{ height: 'auto' }"
   service="products" entity="product" keys="id_product" orderable="yes" detail-mode="none"
   columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname;pdetails"
-  visible-columns="main_photo;product_name;price;status;product_type;avaliable"
+  visible-columns="main_photo;product_name;price;status;product_type;avaliable;plocation"
   sortable-columns="price:DESC;price;avaliable:DESC;avaliable">
 
 
