--- a/camerafront/src/app/login/login.component.html
+++ b/camerafront/src/app/login/login.component.html
@@ -79,6 +79,7 @@
             <span class="dark_text">{{ 'USERNAME' | oTranslate }} : demo</span>
             <span class="dark_text">{{ 'PASSWORD' | oTranslate }} : demouser</span>
           </div> -->
+          <o-button (click)="createNewAccount()" label="Create new account"></o-button>
         </form>
       </div>
     </div>
