--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -1,12 +1,4 @@
-<!-- <div class="container"> -->
 
-
-<!-- <ul>
-      <li *ngFor="let result of searchResults" class="search-result">
-          {{ result }}
-      </li>
-  </ul> title="{{'PRODUCTS TITLE' | oTranslate}}"position="end"width="100px"-->
-<!-- </div> -->
 <o-grid #grid attr="productGrid" cols="5" query-rows="15" quick-filter="false" grid-item-height="2:3"
   insert-button="false" refresh-button="false" gutter-size="5px" fixed-header="yes" [ngStyle]="{ height: 'auto' }"
   service="products" entity="product" keys="id_product" orderable="yes" detail-mode="none"
@@ -14,24 +6,18 @@
   visible-columns="main_photo;product_name;price;status;product_type;avaliable;plocation"
   sortable-columns="price:DESC;price;avaliable:DESC;avaliable">
 
+  <o-combo #bindingInput o-grid-toolbar position="start" label = "product_type" [static-data]="productTypeArray"
+    read-only="no" null-selection="no" value-column="typeText" columns="typeText" translate="yes" (onValueChange)="performSearch()" class="form-field"></o-combo>
+  <div o-grid-toolbar class="search-container0">
 
-  <o-combo #bindingInput o-grid-toolbar position="start" attr="product_type" [static-data]="productTypeArray"
-    value-column="typeText" columns="typeText" visible-columns="typeText" read-only="no" required="yes"
-    null-selection="no" translate="yes" (onValueChange)="performSearch()" class="form-field"></o-combo>
-  <div #bindingInput o-grid-toolbar class="search-container0">
     <div class="search-container">
-      <input type="text" [(ngModel)]="searchTerm" placeholder="{{ 'SEARCH_PLACEHOLDER' | oTranslate }}" (input)="performSearch()">
+      <input type="text" [(ngModel)]="searchTerm" placeholder="{{ 'SEARCH_PLACEHOLDER' | oTranslate }}"
+        (input)="performSearch()">
       <button (click)="performSearch()">{{'SEARCH' | oTranslate}}</button>
     </div>
   </div>
-  <!-- <o-button o-grid-toolbar width="100px" position="start" attr="applyfilter"  label="APPLY_FILTER" (click)="gridFilter()"></o-button> -->
-
-
-
-
   <o-grid-item *ngFor="let list of grid.dataArray">
     <o-column layout-padding class="container-item" (click)="openDetail(list)">
-      <!-- <div class="item-div"> -->
       <div class="image">
         <img src="data:image/png;base64,{{list.main_photo}}">
       </div>
@@ -39,34 +25,14 @@
         <b>{{ list.product_name }}</b>
       </div>
       <div class="details">
-        <!-- <div class="status" class="hidden-info">
-          <span>{{ 'status' | oTranslate}}: </span><b>{{ list.statusname | oTranslate }} </b>
-        </div>
-        <div class="product_type" class="hidden-info">
-          <span>{{ 'product_type' | oTranslate}}: </span><b>{{list.product_type | oTranslate}}</b>
-        </div> -->
         <div class="plocation">
           <span><mat-icon>location_on</mat-icon></span><b>{{ list.plocation }} </b>
         </div>
-        <!--div class="avaliable" class="hidden-info">
-           <span>{{ 'avaliable' | oTranslate}}: </span>
-          <b>
-            <mat-icon [ngClass]="{
-                'green-check': list.avaliable,
-                'red-check': !list.avaliable
-              }">
-              {{ list.avaliable ? "check_circle" : "cancel" }}
-            </mat-icon>
-          </b> 
-        </div> -->
-
         <div class="price">
-          <!-- <b>{{ 'from' | oTranslate}} </b> -->
           <b class="number">{{ list.price }}</b><b>€</b><b class="day">/{{ 'day' |
             oTranslate}} </b>
         </div>
       </div>
-      <!-- </div> -->
     </o-column>
   </o-grid-item>
 </o-grid>
