--- a/camerafront/src/app/login/register/register.component.html
+++ b/camerafront/src/app/login/register/register.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<div mat-dialog-content class="container">
     <o-form fxFill #form (onFormModeChange)="forceInsertMode($event)" (onInsert)="closeDialog($event)"
         service="register" entity="register" header-actions="I" show-header-navigation="no">
 
